--- a/Gradle/build.gradle
+++ b/Gradle/build.gradle
@@ -2,8 +2,6 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'application'
 
-mainClassName = 'com.johnkuper.main.MainClass'
-
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
@@ -18,6 +16,7 @@ dependencies {
 	compile 'mysql:mysql-connector-java:5.1.25'
     compile 'ch.qos.logback:logback-classic:1.1.2'
 	compile 'ma.glasnost.orika:orika-core:1.4.5'
+	compile files('build/libs/lib/slf4j-api-1.7.6.jar')
 }
 
 sourceSets {
@@ -40,12 +39,33 @@ uploadArchives {
 }
 
 task copyToLib( type: Copy ) {
-    into "$buildDir/libs"
+    into "$buildDir/libs/lib"
     from configurations.runtime
 }
 
 jar { dependsOn copyToLib
-    manifest.attributes("Main-Class": mainClassName);
+    manifest {
+        attributes 'Main-Class': 'com.johnkuper.main.MainClass'
+        def manifestCp = configurations.runtime.files.collect  {
+        File file = it
+        "lib/${file.name}"
+        }.join(' ')
+
+
+         configurations.runtime.getAllDependencies().withType(ProjectDependency).each {dep->
+
+            def depProj = dep.getDependencyProject()
+            def libFilePaths = project(depProj.path).libsDir.list().collect{ inFile-> "lib/${inFile}"  }.join(' ')
+            logger.info"Adding libs from project ${depProj.name}: [- ${libFilePaths} -]"
+            manifestCp += ' '+libFilePaths
+        }
+
+        logger.lifecycle("")
+        logger.lifecycle("---Manifest-Class-Path: ${manifestCp}")
+        attributes 'Class-Path': manifestCp
+
+    }
+
 }
 
 task wrapper(type: Wrapper) {
