--- a/Gradle/build.gradle
+++ b/Gradle/build.gradle
@@ -7,6 +7,8 @@ targetCompatibility = JavaVersion.VERSION_1_7
 
 version = '1.2'
 
+mainClassName = "com.johnkuper.main.MainClass"
+
 repositories {
     mavenCentral()
 }
@@ -16,7 +18,6 @@ dependencies {
 	compile 'mysql:mysql-connector-java:5.1.25'
     compile 'ch.qos.logback:logback-classic:1.1.2'
 	compile 'ma.glasnost.orika:orika-core:1.4.5'
-	compile files('build/libs/lib/slf4j-api-1.7.6.jar')
 }
 
 sourceSets {
@@ -30,14 +31,6 @@ sourceSets {
     }
 }
 
-uploadArchives {
-    repositories {
-       flatDir {
-           dirs 'repos'
-       }
-    }
-}
-
 task copyToLib( type: Copy ) {
     into "$buildDir/libs/lib"
     from configurations.runtime
@@ -45,7 +38,7 @@ task copyToLib( type: Copy ) {
 
 jar { dependsOn copyToLib
     manifest {
-        attributes 'Main-Class': 'com.johnkuper.main.MainClass'
+        attributes 'Main-Class': mainClassName
         def manifestCp = configurations.runtime.files.collect  {
         File file = it
         "lib/${file.name}"
@@ -65,9 +58,4 @@ jar { dependsOn copyToLib
         attributes 'Class-Path': manifestCp
 
     }
-
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '1.12'
 }
